search method made in product_offers_controller. navbar-button alignment fixed

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -35,6 +35,7 @@
   justify-content: space-between;
   position: absolute;
   right: 30px;
+  top: 13px;
 }
 
 /* Navbar item */
